--- a/Midterm/Saved/Config/Windows/Engine.ini
+++ b/Midterm/Saved/Config/Windows/Engine.ini
@@ -1,6 +1,6 @@
 [Core.System]
 Paths=../../../Engine/Content
-Paths=../../../../../../Users/gebha/Documents/Unreal Projects/Midterm/Content
+Paths=../../../../../../Users/gebha/Documents/GitHub/179-Midterm/Midterm/Content
 Paths=../../../Engine/Plugins/2D/Paper2D/Content
 Paths=../../../Engine/Plugins/Experimental/CharacterAI/Content
 Paths=../../../Engine/Plugins/Runtime/LeapMotionController/Content
