--- a/Midterm/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Midterm/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,7 +75,7 @@ ActivePaletteViewMode=0
 PaletteThumbnailScale=0.300000
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Animations
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -100,9 +100,15 @@ LastLevel=/Game/NewMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/FirstPersonBP/Animations/FirstPerson_AnimBP.FirstPerson_AnimBP
-OpenAssetsAtExit=/Game/FirstPersonBP/Character/Mesh/SK_Mannequin_Arms_Skeleton.SK_Mannequin_Arms_Skeleton
-OpenAssetsAtExit=/Game/FirstPersonBP/Character/Mesh/SK_Mannequin_Arms.SK_Mannequin_Arms
+OpenAssetsAtExit=/Game/NewMap.NewMap:PersistentLevel.NewMap
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
+OpenAssetsAtExit=/Game/Follower_AI_Con.Follower_AI_Con
+OpenAssetsAtExit=/Game/AI_Char.AI_Char
+OpenAssetsAtExit=/Game/CloseEnough.CloseEnough
+OpenAssetsAtExit=/Game/FollowerBT.FollowerBT
+OpenAssetsAtExit=/Game/AgroCheck.AgroCheck
+OpenAssetsAtExit=/Game/RapidMoveTo.RapidMoveTo
+OpenAssetsAtExit=/Game/FollowerBlackboard.FollowerBlackboard
 
 [DetailCategories]
 VehicleBlueprint_C.TransformCommon=True
@@ -336,8 +342,138 @@ PhATSimOptions.Advanced=True
 PhATSimOptions.Drawing=True
 FirstPerson_AnimBP_C.Default=True
 FirstPerson_AnimBP_C.RootMotion=True
+GeneralProjectSettings.Publisher=True
+GeneralProjectSettings.About=True
+GeneralProjectSettings.Legal=True
+GeneralProjectSettings.Displayed=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.LocalMultiplayer=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.GameInstance=True
+NewMap_C.Default=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Tags=True
+NavMeshBoundsVolume.TransformCommon=True
+NavMeshBoundsVolume.BrushSettings=True
+NavMeshBoundsVolume.Collision=True
+NavMeshBoundsVolume.Tags=True
+NavMeshBoundsVolume.Actor=True
+RecastNavMesh.Display=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+AI_Character_C.Tick=True
+AI_Character_C.Replication=True
+AI_Character_C.Input=True
+AI_Character_C.Actor=True
+AI_Char_C.Character=True
+AI_Char_C.Tick=True
+AI_Char_C.Camera=True
+AI_Char_C.Pawn=True
+AI_Char_C.Rendering=True
+AI_Char_C.Replication=True
+AI_Char_C.Input=True
+AI_Char_C.Actor=True
+AI_Char_C.Variable=True
+AI_Char_C.TransformCommon=True
+AI_Char_C.Sockets=True
+AI_Char_C.Animation=True
+AI_Char_C.Mesh=True
+AI_Char_C.Clothing=True
+AI_Char_C.Physics=True
+AI_Char_C.Collision=True
+AI_Char_C.Lighting=True
+AI_Char_C.Tags=True
+AI_Char_C.Activation=True
+AI_Char_C.Events=True
+AI_Char_C.Shape=True
+AI_Char_C.Navigation=True
+AI_Char_C.Character Movement (General Settings)=True
+AI_Char_C.Character Movement: Walking=True
+AI_Char_C.Character Movement: Jumping / Falling=True
+AI_Char_C.Character Movement: Swimming=True
+AI_Char_C.Character Movement: Flying=True
+AI_Char_C.Character Movement: Custom Movement=True
+AI_Char_C.Character Movement: Physics Interaction=True
+AI_Char_C.Character Movement: Avoidance=True
+AI_Char_C.Character Movement: NavMesh Movement=True
+AI_Char_C.Movement Capabilities=True
+AI_Char_C.MovementComponent=True
+AI_Char_C.Velocity=True
+AI_Char_C.PlanarMovement=True
+REINST_AI_Char_C_166.Character=True
+REINST_AI_Char_C_166.Tick=True
+REINST_AI_Char_C_166.Camera=True
+REINST_AI_Char_C_166.Pawn=True
+REINST_AI_Char_C_166.Rendering=True
+REINST_AI_Char_C_166.Replication=True
+REINST_AI_Char_C_166.Input=True
+REINST_AI_Char_C_166.Actor=True
+BlackboardData.Parent=True
+BlackboardData.Key=True
+Follower_AI_Con_C.Tick=True
+Follower_AI_Con_C.Replication=True
+Follower_AI_Con_C.Input=True
+Follower_AI_Con_C.Actor=True
+NameProperty.Variable=True
+NameProperty.DefaultValueCategory=True
+AI_Char_C.Materials=True
+BehaviorTreeGraphNode_Root.BehaviorTree=True
+BTComposite_Selector.Description=True
+BTComposite_Sequence.Description=True
+BTService_BlueprintBase_New_C.Description=True
+BTService_BlueprintBase_New_C.Service=True
+AgroCheck_C.Description=True
+AgroCheck_C.Service=True
+ByteProperty.Variable=True
+ByteProperty.DefaultValueCategory=True
+ArrayProperty.Variable=True
+ArrayProperty.DefaultValueCategory=True
+StructProperty.Variable=True
+StructProperty.DefaultValueCategory=True
+BTTask_BlueprintBase_New_C.Description=True
+BTDecorator_BlueprintBase_New_C.Description=True
+BTDecorator_BlueprintBase_New_C.FlowControl=True
+BTDecorator_BlueprintBase_New_C.Condition=True
+CloseEnough_C.Description=True
+CloseEnough_C.FlowControl=True
+CloseEnough_C.Condition=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionResult.Graph=True
+AgroCheck_C.Default=True
+BTDecorator_Blackboard.FlowControl=True
+BTDecorator_Blackboard.Blackboard=True
+BTDecorator_Blackboard.Description=True
+RapidMoveTo_C.Default=True
+RapidMoveTo_C.Description=True
+BTTask_MoveTo.Node=True
+BTTask_MoveTo.Blackboard=True
+BTTask_MoveTo.Description=True
+BTTask_Wait.Wait=True
+BTTask_Wait.Description=True
+CloseEnough_C.Default=True
+BTDecorator_ReachedMoveGoal.Condition=True
+BTDecorator_ReachedMoveGoal.Description=True
+BTDecorator_DoesPathExist.Condition=True
+BTDecorator_DoesPathExist.FlowControl=True
+BTDecorator_DoesPathExist.Node=True
+BTDecorator_DoesPathExist.Description=True
+IntProperty.Variable=True
+IntProperty.DefaultValueCategory=True
+AttackPlayer_C.Description=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/AI_Char.AI_Char;
+RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_9
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/VehicleAdvBP/Vehicle/VehicleBlueprint.VehicleBlueprint;
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter;
@@ -345,7 +481,7 @@ RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorF
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1310.000 Y=750.000
+WindowSize=X=1330.000 Y=770.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -753,6 +889,8 @@ NewLevelDialog.TimeStamp=2016.02.14-15.23.19
 NewLevelDialog.LastCompileMethod=Unknown
 PhAT.TimeStamp=2016.02.14-15.24.23
 PhAT.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2016.02.14-15.18.30
+ExternalImagePicker.LastCompileMethod=Unknown
 
 [FEditorModeTools]
 CoordSystem=1
@@ -761,27 +899,40 @@ CoordSystem=1
 OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
+QualityLevel=3
 
 [DetailPropertyExpansion]
-Landscape=Object.Lightmass.LightmassSettings
-LandscapeProxy=Object.Lightmass.LightmassSettings
+Landscape="Object.Lightmass.LightmassSettings" 
+LandscapeProxy="Object.Lightmass.LightmassSettings" 
 LightmassImportanceVolume=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
-Volume=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
-Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
+Volume="Object.BrushBuilder.BrushBuilder.Object.BrushSettings" 
+Brush="Object.BrushBuilder.BrushBuilder.Object.BrushSettings" 
+NavMeshBoundsVolume="Object.BrushBuilder.BrushBuilder.Object.BrushSettings" 
+AI_Char_C="Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps" 
+Character="Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps" 
+Pawn=
+REINST_AI_Char_C_166="Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps" 
+BlackboardData="Object.Blackboard" 
+DataAsset="Object.Blackboard" 
+Object="Object.Blackboard" 
 
 [MessageLog]
 LastLogListing=PIE
 
 [DetailCustomWidgetExpansion]
 TriggerBox=TriggerBox.Collision.Collision,
+AI_Char_C=
 
 [DetailCategoriesAdvanced]
 FirstPersonCharacter_C.Animation=True
+RecastNavMesh.Generation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode=0
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=0
 /Game/FirstPersonBP/Character/Mesh/SK_Mannequin_Arms_PhysicsAsset.SK_Mannequin_Arms_PhysicsAsset=1
+/Game/FollowerBlackboard.FollowerBlackboard=0
+/Game/AttackPlayer.AttackPlayer=0
 
 [/Script/UnrealEd.PersonaOptions]
 ViewportBackgroundColor=(R=0.040000,G=0.040000,B=0.040000,A=0.000000)
