--- a/Midterm/Config/DefaultEngine.ini
+++ b/Midterm/Config/DefaultEngine.ini
@@ -4,18 +4,6 @@ GameName=Midterm
 [/Script/Engine.PhysicsSettings]
 bSubstepping=True
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/VehicleAdvBP/Maps/AdvancedVehicleExamplemap
-GameDefaultMap=/Game/VehicleAdvBP/Maps/AdvancedVehicleExamplemap
-TransitionMap=
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/VehicleAdvBP/Blueprints/VehicleAdvGameMode.VehicleAdvGameMode_C
-GlobalDefaultServerGameMode=None
-
-
-
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_VehicleAdvBP",NewGameName="/Script/Midterm")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_VehicleAdvBP",NewGameName="/Script/Midterm")
@@ -72,5 +60,18 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/NewMap
+LocalMapOptions=
+TransitionMap=
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/NewMap
+ServerDefaultMap=/Engine/Maps/Entry
+GlobalDefaultGameMode=/Game/VehicleAdvBP/Blueprints/VehicleAdvGameMode.VehicleAdvGameMode_C
+GlobalDefaultServerGameMode=None
 
 
